Added slide transition

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             <p class="td-time-from">8:00 AM</p> - <p class="td-time-to">10:00 AM</p>
                         </div>
                         <div class="td-more">
-                            <div class="td-m tdma "></div>
-                            <div class="td-m tdmb "></div>
+                            <div class="td-m tdma short "></div>
+                            <div class="td-m tdmb short"></div>
                         </div>
                     </div>
                     <div class="td-icons">
