Added Add-Task functionality and full-screen on mobile-devices

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                         </div>
                         <div class="add-title">
                             <p class="p-add-title">Title</p>
-                            <input type="text" spellcheck="false" name="task-title" id="taskTit">
+                            <input type="text" spellcheck="false" name="taskTitle" id="taskTit">
                         </div>
                         <div class="add-detail">
                             <p class="p-add-detail">Detail</p>
-                            <textarea name="task-detail" style="resize: none;" spellcheck="false" id="taskDet"
+                            <textarea name="taskDetail" style="resize: none;" spellcheck="false" id="taskDet"
                                 rows="3"></textarea>
                         </div>
                         <div class="add-time">
                             <p class="p-add-time">Time</p>
                             <div class="add-timings">
-                                <input type="time" name="" id="">
+                                <input type="time" name="timeFrom" id="">
                                 <p>to</p>
-                                <input type="time" name="" id="">
+                                <input type="time" name="timeTo" id="">
                             </div>
                         </div>
                     </form>
@@ -96,7 +96,7 @@
             </svg>
         </div>
      
-        <div class="todoDarkScreen shrink"></div>
+        <div class="todoDarkScreen"></div>
 
         <div id="addTaskDoneBtn" class="shrink" >
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
